- fixed major bug with Application module
- fixed major bug with YAML loading on Android. This caused to crash of projects trying to load config.yml on Android devices
- forgot to remove stdlib dependency, so now it is done
- added comparison checks for assets. Before, each time project was built, all assets was copied. Now compiler checks if they are modified
- added "clean" task to CLI

[5.1.0]
- added --compile (example: non build desktop --compile) flag which will set that all ruby code is compiled to java bytecode during build. This means performance almost equal to native Ruby (sometimes even faster) but this also means a bit slower start and build tasks. Then to force load your optimized code, just add .class suffix when using require method
- removed ALL ruby builtin and standard libraries for maximum performamce and cross-platform compatibility. Anyways, NÖN is a game engine, and all important is included in it's own libraries
- fixed few small bugs with non.launcher and joined some tasks together, so this should descrease build time by few seconds
- now resolveDependencies task is executed only when NÖN version changes and not before every task
- improved ruby backtrace (now displays only important messages)
- fixed small networking bug caused by sharing same listener instance between both client and server
- fixed small bug where compiler was creating empty "project" folder on wrong location
- merged non.launcher and non source code for easy building with single "rake" command

[5.0.2]
- added stdlib support (not tested)
- added physics module back
- some small API changes for physics and lights module
- rewrote audio, keyboard, mouse, accelerometer and touch modules in Ruby
- fixed big android bug with resource files about what I forgot before
- another structure changes of source code
- speeded up build times a bit by removing unnecessary gradle projects
- removed time module (not needed cause of Ruby) and GUI module
- added app module

[5.0.1]